# orchestration

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt
docs/: future-orchestrators.md  orchestration-design.md  run-workspace.md  weather-mvp-local-workflow.md
examples/: README.md
examples/configs/: weather-mvp-local.example.yml
scripts/: validate.sh
src/odl_orchestration/: cli.py
src/odl_orchestration/commands/: runner.py
src/odl_orchestration/executors/: subprocess_executor.py
src/odl_orchestration/models/: run.py
src/odl_orchestration/reports/: run_summary.py
src/odl_orchestration/utils/: dates.py  paths.py
src/odl_orchestration/workflows/: weather_mvp.py
tests/: test_cli.py  test_run_summary.py  test_subprocess_executor.py  test_weather_mvp_workflow.py
