[project]
name = "odl-orchestration"
version = "0.1.0"
description = "Open Data Lakehouse Lab Orchestration"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[project.scripts]
odl-orchestration = "odl_orchestration.cli:app"

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
